--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,17 @@ before_install:
 
 script:
   - docker run -e CI=true dip1683/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "docker-env"
+  bucker_name: "elasticbeanstalk-us-east-1-331266399352"
+  backet_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY" 
+  
